Fix the logo alignment

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -67,10 +67,6 @@ button:focus {
   outline: none;
 }
 
-.logo {
-  margin-left: -2%;
-}
-
 @keyframes fadeInDown {
   from {
     transform: translate3d(0, -100%, 0);
